pkgs/cupertino_http/lib/src/cronet.dart


  late final _Cronet_EngineParams_http_cache_mode_setPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(Cronet_EngineParamsPtr,
              ffi.Int32)>>('Cronet_EngineParams_http_cache_mode_set');
  late final _Cronet_EngineParams_http_cache_mode_set =
      _Cronet_EngineParams_http_cache_mode_setPtr.asFunction<
          void Function(Cronet_EngineParamsPtr, int)>();

  void Cronet_EngineParams_http_cache_max_size_set(
    Cronet_EngineParamsPtr self,
    int http_cache_max_size,
  ) {
    return _Cronet_EngineParams_http_cache_max_size_set(
      self,
      http_cache_max_size,
    );
  }

  late final _Cronet_EngineParams_http_cache_max_size_setPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(Cronet_EngineParamsPtr,
              ffi.Int64)>>('Cronet_EngineParams_http_cache_max_size_set');
  late final _Cronet_EngineParams_http_cache_max_size_set =
      _Cronet_EngineParams_http_cache_max_size_setPtr.asFunction<
          void Function(Cronet_EngineParamsPtr, int)>();

  void Cronet_EngineParams_quic_hints_add(
    Cronet_EngineParamsPtr self,
    Cronet_QuicHintPtr element,
  ) {
    return _Cronet_EngineParams_quic_hints_add(
      self,
      element,
    );
  }

  late final _Cronet_EngineParams_quic_hints_addPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(Cronet_EngineParamsPtr,
              Cronet_QuicHintPtr)>>('Cronet_EngineParams_quic_hints_add');
  late final _Cronet_EngineParams_quic_hints_add =
      _Cronet_EngineParams_quic_hints_addPtr.asFunction<
          void Function(Cronet_EngineParamsPtr, Cronet_QuicHintPtr)>();

  void Cronet_EngineParams_public_key_pins_add(
    Cronet_EngineParamsPtr self,
    Cronet_PublicKeyPinsPtr element,
  ) {
    return _Cronet_EngineParams_public_key_pins_add(
      self,
      element,
    );
  }

  late final _Cronet_EngineParams_public_key_pins_addPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  Cronet_EngineParamsPtr, Cronet_PublicKeyPinsPtr)>>(
      'Cronet_EngineParams_public_key_pins_add');
  late final _Cronet_EngineParams_public_key_pins_add =
      _Cronet_EngineParams_public_key_pins_addPtr.asFunction<
          void Function(Cronet_EngineParamsPtr, Cronet_PublicKeyPinsPtr)>();

  void
      Cronet_EngineParams_enable_public_key_pinning_bypass_for_local_trust_anchors_set(
    Cronet_EngineParamsPtr self,
    bool enable_public_key_pinning_bypass_for_local_trust_anchors,
  ) {
    return _Cronet_EngineParams_enable_public_key_pinning_bypass_for_local_trust_anchors_set(
      self,
      enable_public_key_pinning_bypass_for_local_trust_anchors,
    );
  }

  late final _Cronet_EngineParams_enable_public_key_pinning_bypass_for_local_trust_anchors_setPtr =
      _lookup<
              ffi.NativeFunction<
                  ffi.Void Function(Cronet_EngineParamsPtr, ffi.Bool)>>(
          'Cronet_EngineParams_enable_public_key_pinning_bypass_for_local_trust_anchors_set');
  late final _Cronet_EngineParams_enable_public_key_pinning_bypass_for_local_trust_anchors_set =
      _Cronet_EngineParams_enable_public_key_pinning_bypass_for_local_trust_anchors_setPtr
          .asFunction<void Function(Cronet_EngineParamsPtr, bool)>();

  void Cronet_EngineParams_network_thread_priority_set(
    Cronet_EngineParamsPtr self,
    double network_thread_priority,
  ) {
    return _Cronet_EngineParams_network_thread_priority_set(
      self,
      network_thread_priority,
    );
  }

  late final _Cronet_EngineParams_network_thread_priority_setPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(Cronet_EngineParamsPtr,
              ffi.Double)>>('Cronet_EngineParams_network_thread_priority_set');
  late final _Cronet_EngineParams_network_thread_priority_set =
      _Cronet_EngineParams_network_thread_priority_setPtr.asFunction<
          void Function(Cronet_EngineParamsPtr, double)>();

  void Cronet_EngineParams_experimental_options_set(
    Cronet_EngineParamsPtr self,
    Cronet_String experimental_options,
  ) {
    return _Cronet_EngineParams_experimental_options_set(
      self,
      experimental_options,
    );
  }

  late final _Cronet_EngineParams_experimental_options_setPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(Cronet_EngineParamsPtr,
              Cronet_String)>>('Cronet_EngineParams_experimental_options_set');
  late final _Cronet_EngineParams_experimental_options_set =
      _Cronet_EngineParams_experimental_options_setPtr.asFunction<
          void Function(Cronet_EngineParamsPtr, Cronet_String)>();

  /// Cronet_EngineParams getters.
  bool Cronet_EngineParams_enable_check_result_get(
    Cronet_EngineParamsPtr self,
  ) {
    return _Cronet_EngineParams_enable_check_result_get(
      self,
    );
  }

  late final _Cronet_EngineParams_enable_check_result_getPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(Cronet_EngineParamsPtr)>>(
          'Cronet_EngineParams_enable_check_result_get');
  late final _Cronet_EngineParams_enable_check_result_get =
      _Cronet_EngineParams_enable_check_result_getPtr.asFunction<
          bool Function(Cronet_EngineParamsPtr)>();

  Cronet_String Cronet_EngineParams_user_agent_get(
    Cronet_EngineParamsPtr self,
  ) {
    return _Cronet_EngineParams_user_agent_get(
      self,
    );
  }

  late final _Cronet_EngineParams_user_agent_getPtr = _lookup<
          ffi.NativeFunction<Cronet_String Function(Cronet_EngineParamsPtr)>>(
      'Cronet_EngineParams_user_agent_get');
  late final _Cronet_EngineParams_user_agent_get =
      _Cronet_EngineParams_user_agent_getPtr.asFunction<
          Cronet_String Function(Cronet_EngineParamsPtr)>();

  Cronet_String Cronet_EngineParams_accept_language_get(
    Cronet_EngineParamsPtr self,
  ) {
    return _Cronet_EngineParams_accept_language_get(
      self,
    );
  }

  late final _Cronet_EngineParams_accept_language_getPtr = _lookup<
          ffi.NativeFunction<Cronet_String Function(Cronet_EngineParamsPtr)>>(
      'Cronet_EngineParams_accept_language_get');
  late final _Cronet_EngineParams_accept_language_get =
      _Cronet_EngineParams_accept_language_getPtr.asFunction<
          Cronet_String Function(Cronet_EngineParamsPtr)>();

  Cronet_String Cronet_EngineParams_storage_path_get(
    Cronet_EngineParamsPtr self,
  ) {
    return _Cronet_EngineParams_storage_path_get(
      self,
    );
  }

  late final _Cronet_EngineParams_storage_path_getPtr = _lookup<
          ffi.NativeFunction<Cronet_String Function(Cronet_EngineParamsPtr)>>(
      'Cronet_EngineParams_storage_path_get');
  late final _Cronet_EngineParams_storage_path_get =
      _Cronet_EngineParams_storage_path_getPtr.asFunction<
          Cronet_String Function(Cronet_EngineParamsPtr)>();

  bool Cronet_EngineParams_enable_quic_get(
    Cronet_EngineParamsPtr self,
  ) {
    return _Cronet_EngineParams_enable_quic_get(
      self,
    );
  }

  late final _Cronet_EngineParams_enable_quic_getPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(Cronet_EngineParamsPtr)>>(
          'Cronet_EngineParams_enable_quic_get');
  late final _Cronet_EngineParams_enable_quic_get =
      _Cronet_EngineParams_enable_quic_getPtr.asFunction<
          bool Function(Cronet_EngineParamsPtr)>();

  bool Cronet_EngineParams_enable_http2_get(
    Cronet_EngineParamsPtr self,
  ) {
    return _Cronet_EngineParams_enable_http2_get(
      self,
    );
  }

  late final _Cronet_EngineParams_enable_http2_getPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(Cronet_EngineParamsPtr)>>(
          'Cronet_EngineParams_enable_http2_get');
  late final _Cronet_EngineParams_enable_http2_get =
      _Cronet_EngineParams_enable_http2_getPtr.asFunction<
          bool Function(Cronet_EngineParamsPtr)>();

  bool Cronet_EngineParams_enable_brotli_get(
    Cronet_EngineParamsPtr self,
  ) {
    return _Cronet_EngineParams_enable_brotli_get(
      self,
    );
  }

  late final _Cronet_EngineParams_enable_brotli_getPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(Cronet_EngineParamsPtr)>>(
          'Cronet_EngineParams_enable_brotli_get');
  late final _Cronet_EngineParams_enable_brotli_get =
      _Cronet_EngineParams_enable_brotli_getPtr.asFunction<
          bool Function(Cronet_EngineParamsPtr)>();

  int Cronet_EngineParams_http_cache_mode_get(
    Cronet_EngineParamsPtr self,
  ) {
    return _Cronet_EngineParams_http_cache_mode_get(
      self,
    );
  }

  late final _Cronet_EngineParams_http_cache_mode_getPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(Cronet_EngineParamsPtr)>>(
          'Cronet_EngineParams_http_cache_mode_get');
  late final _Cronet_EngineParams_http_cache_mode_get =
      _Cronet_EngineParams_http_cache_mode_getPtr.asFunction<
          int Function(Cronet_EngineParamsPtr)>();

  int Cronet_EngineParams_http_cache_max_size_get(
    Cronet_EngineParamsPtr self,
  ) {
    return _Cronet_EngineParams_http_cache_max_size_get(
      self,
    );
  }

  late final _Cronet_EngineParams_http_cache_max_size_getPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function(Cronet_EngineParamsPtr)>>(
          'Cronet_EngineParams_http_cache_max_size_get');
  late final _Cronet_EngineParams_http_cache_max_size_get =
      _Cronet_EngineParams_http_cache_max_size_getPtr.asFunction<
          int Function(Cronet_EngineParamsPtr)>();

  int Cronet_EngineParams_quic_hints_size(
    Cronet_EngineParamsPtr self,
  ) {
    return _Cronet_EngineParams_quic_hints_size(
      self,
    );
  }

  late final _Cronet_EngineParams_quic_hints_sizePtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(Cronet_EngineParamsPtr)>>(
          'Cronet_EngineParams_quic_hints_size');
  late final _Cronet_EngineParams_quic_hints_size =
      _Cronet_EngineParams_quic_hints_sizePtr.asFunction<
          int Function(Cronet_EngineParamsPtr)>();

  Cronet_QuicHintPtr Cronet_EngineParams_quic_hints_at(
    Cronet_EngineParamsPtr self,
    int index,
  ) {
    return _Cronet_EngineParams_quic_hints_at(
      self,
      index,
    );
  }

  late final _Cronet_EngineParams_quic_hints_atPtr = _lookup<
      ffi.NativeFunction<
          Cronet_QuicHintPtr Function(Cronet_EngineParamsPtr,
              ffi.Uint32)>>('Cronet_EngineParams_quic_hints_at');
  late final _Cronet_EngineParams_quic_hints_at =
      _Cronet_EngineParams_quic_hints_atPtr.asFunction<
          Cronet_QuicHintPtr Function(Cronet_EngineParamsPtr, int)>();

  void Cronet_EngineParams_quic_hints_clear(
    Cronet_EngineParamsPtr self,
  ) {
    return _Cronet_EngineParams_quic_hints_clear(
      self,
    );
  }

  late final _Cronet_EngineParams_quic_hints_clearPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(Cronet_EngineParamsPtr)>>(
          'Cronet_EngineParams_quic_hints_clear');
  late final _Cronet_EngineParams_quic_hints_clear =
      _Cronet_EngineParams_quic_hints_clearPtr.asFunction<
          void Function(Cronet_EngineParamsPtr)>();

  int Cronet_EngineParams_public_key_pins_size(
    Cronet_EngineParamsPtr self,
  ) {
    return _Cronet_EngineParams_public_key_pins_size(
      self,
    );
  }

  late final _Cronet_EngineParams_public_key_pins_sizePtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(Cronet_EngineParamsPtr)>>(
          'Cronet_EngineParams_public_key_pins_size');
  late final _Cronet_EngineParams_public_key_pins_size =
      _Cronet_EngineParams_public_key_pins_sizePtr.asFunction<
          int Function(Cronet_EngineParamsPtr)>();

  Cronet_PublicKeyPinsPtr Cronet_EngineParams_public_key_pins_at(
    Cronet_EngineParamsPtr self,
    int index,
  ) {
    return _Cronet_EngineParams_public_key_pins_at(
      self,
      index,
    );
  }
